--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: YJ Blog
 SEOTitle: 逸野山人的博客 | YJ Blog
 header-img: img/post-bg-desk.jpg
 email: yangjie19880501@126.com
