--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: YJ Blog
+title: 派肽科技
 SEOTitle: 逸野山人的博客 | YJ Blog
 header-img: img/post-bg-desk.jpg
 email: yangjie19880501@126.com
-description: "Every failure is leading towards success."
+description: "派肽科技 派肽科技 派肽科技."
 keyword: "YJ, YJ Blog, 逸野山人的博客, iOS, Apple, iPhone"
 url: "http://yiyeshanren.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
